--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html>
   <head>
     <title>Page Title</title>
-    
-    <link rel="stylesheet/less" type="text/css" href="core/less/index.less" />
-    <script src="https://cdn.jsdelivr.net/npm/less" ></script>
-
+    <link rel="stylesheet" type="text/css" href="core/css/index.css" />
     <script type="module" src="/core/js/index.js"></script>
   </head>
   <body>
     <noscript>
       <strong>
-        We're sorry but uptute doesn't work properly without JavaScript enabled.
+        JavaScript is required for proper work of this page.
         Please enable it to continue.
       </strong>
     </noscript>
-    <div id="app"></div>
+    <u-app id="app"></u-app>
   </body>
 </html>
