--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Page Title</title>
-    <link rel="stylesheet" type="text/css" href="core/css/index.css" />
-    <script type="module" src="/core/js/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./core/css/index.css" />
+    <script type="module" src="./core/js/index.js"></script>
   </head>
   <body>
     <noscript>
