--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="./core/css/index.css" />
+    <link rel="icon" type="image/x-icon" href="./src/public/favicon.png">
     <script type="module" src="./core/js/index.js"></script>
   </head>
   <body>
